# comfyui-good-anima

./: .gitignore  CHANGELOG.md  README.md  README_EN.md
.helloagents/sessions/: active.json
.snow/: settings.json
.snow/notebook/: comfyui-good-anima.json  comfyui-good-anima_snapshots.json
anima-composition-director/: SKILL.md
anima-composition-director/agents/: openai.yaml
anima-composition-director/references/: canvas-layout.md  flywheel-test-prompts-safe.md  intent-expansion-patterns.md  scene-emotion.md
anima-random-gen/: SKILL.md  artist_utils.py  build_pools.py  danbooru_utils.py  narratives.py  prompt_builder.py  random_generator.py  sampler.py  tag_pools.json
anima-random-gen/agents/: openai.yaml
comfyui-anima-master/: SKILL.md
comfyui-anima-master/agents/: openai.yaml
comfyui-anima-master/references/: examples.md
comfyui-animatool/: SKILL.md
comfyui-animatool/agents/: openai.yaml
comfyui-animatool/references/: batch-strategy.md  chinese-visual-brief.md  prompt-assembly.md
comfyui-good-anima-new/: .gitignore
comfyui-good-anima-new/anima-composition-director/: SKILL.md
comfyui-good-anima-new/anima-random-gen/: SKILL.md  artist_utils.py  build_pools.py  (+5 more)
comfyui-good-anima-new/danbooru-tags/rust-cli/: Cargo.toml
comfyui-good-anima-new/danbooru-tags/rust-cli/src/: cli.rs  db.rs  format.rs  groups.rs  lib.rs  main.rs  prompt.rs  result_item.rs  search.rs  text_match.rs  types.rs
comfyui-manager/: SKILL.md
danbooru-tags/: SKILL.md  build_index.py  sqlite_index.py  tag_groups.py
shared/: conventions.md  powershell-setup.md
(+91 files in other folders)
